--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,6 +5,8 @@
   /* height: 100%; */
   background-color: #1e1e1e;
   color: #ffffff;
+  width: 100%;
+  /* overflow-x: hidden; */
 }
 
 h1 {
@@ -31,34 +33,126 @@ h4 {
   font-weight: normal;
 }
 
-.TopBar {
-  position: sticky;
-  top: 0;
+/* button {
   display: flex;
-  justify-content: right;
-  align-items: center;
-  min-height: 4rem;
-  padding: 0 20px;
-  z-index: 10;
+  color: blue;
+  margin: 0;
+  padding: 20px 0;
   background-color: #1e1e1e;
+  color: #ffffff;
+  opacity: 0.7;
+  border: none;
+  border-left: solid #ffffff 3px;
+  text-align: left;
+  white-space: nowrap;
+  width: 100%;
+  font-size: 16px;
+} */
+
+@media (max-width: 600px) {
+  .TopBar {
+    display: none;
+  }
 }
 
-.RightBar {
-  display: block;
-  position: fixed;
-  bottom: 30px;
-  right: 50px;
-  writing-mode: vertical-rl;
-  /* left: auto; */
-  content: "";
-  display: block;
-  width: 1px;
-  height: 100%;
-  margin: 0px 20;
-  background-color: white;
+@media (min-width: 600px) {
+  .TopBar {
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    min-height: 4rem;
+    padding: 0 20px;
+    z-index: 15;
+    background-color: #1e1e1e;
+  }
 }
 
-.Button {
+@media (min-width: 600px) {
+  .Hamburger {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  .Hamburger {
+    position: sticky;
+    /* position: -webkit-sticky; */
+    /* min-height: 4rem; */
+    top: 10px;
+    display: flex;
+    justify-content: right;
+    z-index: 16;
+  }
+}
+
+@media (max-width: 600px) {
+  .HamburgerButton {
+    display: flex;
+    justify-content: right;
+    /* color: blue; */
+    margin: 0;
+    padding: 20px;
+    background-color: inherit;
+    color: #ffffff;
+    opacity: 0.7;
+    border: none;
+    /* border-left: solid #ffffff 3px; */
+    text-align: left;
+    white-space: nowrap;
+    width: 100%;
+    font-size: 16px;
+    /* display: block;
+    justify-self: right;
+    padding: 20px;
+    border: 0;
+    text-align: right;
+    background: #222; */
+  }
+}
+
+@media (max-width: 600px) {
+  .HamburgerMenu {
+    position: fixed;
+    top: 0;
+    /* padding-top: 20px; */
+    background-color: rgba(50, 50, 50, 0.95);
+    font-size: 60px;
+    /* opacity: 0.3; */
+    z-index: 15;
+    justify-content: right;
+    height: 100%;
+    width: 100%;
+    /* display: flex; */
+  }
+}
+
+@media (max-width: 600px) {
+  .HamburgerMenu ul {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 600px) {
+  .RightBar {
+    display: block;
+    position: fixed;
+    bottom: 30px;
+    right: 50px;
+    /* writing-mode: vertical-rl; */
+    /* left: auto; */
+    content: "";
+    display: block;
+    width: 1px;
+    height: 100%;
+    margin: 0px 20;
+    background-color: white;
+  }
+}
+
+.StyledButton {
   text-decoration: none;
   color: goldenrod;
   border: 1px solid goldenrod;
@@ -67,7 +161,7 @@ h4 {
   margin: 0 2rem;
 }
 
-.Button:hover {
+.StyledButton:hover {
   color: #aaaaaa;
   border-color: #aaaaaa;
 }
@@ -83,10 +177,21 @@ h4 {
 .Intro {
   display: flex;
   flex-direction: column;
-  padding-top: 1rem;
   padding: 0 150px;
   min-height: 100vh;
 }
+@media (max-width: 600px) {
+  .Intro {
+    padding: 0 25px;
+  }
+}
+
+@media (max-width: 600px) {
+  .ProfileImage {
+    display: none;
+  }
+}
+
 .Name {
   font-size: 6rem;
   font-weight: 500;
@@ -105,6 +210,12 @@ h4 {
   flex-direction: column;
   /* justify-content: space-evenly; */
   padding: 0 150px;
+}
+
+@media (max-width: 600px) {
+  .MainContent {
+    padding: 0 25px;
+  }
 }
 
 .Section {
@@ -140,6 +251,12 @@ h4 {
 
 .ExperienceContent {
   display: flex;
+}
+
+@media (max-width: 600px) {
+  .ExperienceContent {
+    flex-direction: column;
+  }
 }
 
 .ExperienceSummary ul {
