--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -1,12 +1,20 @@
-.Sidebar {
-  display: flex;
-  flex-direction: column;
-  position: fixed;
-  width: 45px;
-  bottom: 30px;
-  left: 40px;
-  /* right: auto; */
-  /* z-index: 10; */
+@media (max-width: 600px) {
+  .Sidebar {
+    display: none;
+  }
+}
+
+@media (min-width: 600px) {
+  .Sidebar {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    width: 45px;
+    bottom: 30px;
+    left: 40px;
+    /* right: auto; */
+    /* z-index: 10; */
+  }
 }
 
 .Sidebar a {
