--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 h2 {
-  font-size: 6rem;
+  font-size: 4rem;
   font-weight: 500;
   margin: 0;
 }
@@ -32,22 +32,6 @@ h4 {
   color: goldenrod;
   font-weight: normal;
 }
-
-/* button {
-  display: flex;
-  color: blue;
-  margin: 0;
-  padding: 20px 0;
-  background-color: #1e1e1e;
-  color: #ffffff;
-  opacity: 0.7;
-  border: none;
-  border-left: solid #ffffff 3px;
-  text-align: left;
-  white-space: nowrap;
-  width: 100%;
-  font-size: 16px;
-} */
 
 @media (max-width: 600px) {
   .TopBar {
@@ -118,7 +102,7 @@ h4 {
     top: 0;
     /* padding-top: 20px; */
     background-color: rgba(50, 50, 50, 0.95);
-    font-size: 60px;
+    font-size: 40px;
     /* opacity: 0.3; */
     z-index: 15;
     justify-content: right;
@@ -130,9 +114,18 @@ h4 {
 
 @media (max-width: 600px) {
   .HamburgerMenu ul {
+    /* height: 70%; */
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
   }
+}
+
+.HamburgerMenu li {
+  /* height: 70%; */
+  list-style: none;
+  margin: 20px;
 }
 
 @media (min-width: 600px) {
@@ -186,23 +179,54 @@ h4 {
   }
 }
 
+@media (min-width: 600px) {
+  .ImageContainer {
+    display: flex;
+    width: 30%;
+    height: auto;
+    margin: 25px;
+  }
+}
+
+@media (max-width: 600px) {
+  .ImageContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 25px;
+  }
+}
+
+@media (min-width: 600px) {
+  .ProfileImage {
+    align-self: center;
+    display: block;
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+  }
+}
+
 @media (max-width: 600px) {
   .ProfileImage {
-    display: none;
+    display: block;
+    width: 80%;
+    border-radius: 20px;
   }
 }
 
 .Name {
-  font-size: 6rem;
+  font-size: 2rem;
   font-weight: 500;
   margin: 0;
 }
 .Blurb {
-  font-size: 4rem;
+  font-size: 3rem;
   font-weight: normal;
   color: #dddddd;
   /* font-weight: 300; */
   margin: 0;
+  padding-top: 10px;
 }
 .MainContent {
   /* width: 40%; */
@@ -218,18 +242,52 @@ h4 {
   }
 }
 
-.Section {
-  padding-top: 100px;
-  min-height: calc(100vh - 100px);
+@media (min-width: 600px) {
+  .Section {
+    padding-top: 100px;
+    min-height: calc(100vh - 100px);
+  }
+}
+
+@media (max-width: 600px) {
+  .Section {
+    padding-top: 100px;
+  }
 }
 
 .AboutContent {
   display: flex;
+  justify-content: space-between;
+
   /* min-height: 100vh; */
+}
+
+@media (max-width: 600px) {
+  .AboutContent {
+    flex-direction: column;
+  }
 }
 
 .AboutContent p {
   line-height: 1.5rem;
+}
+
+.AboutSummary {
+  /* width: 70%; */
+  flex: 2 1 0;
+}
+
+.AboutSummary ul {
+  list-style: none;
+}
+
+.AboutSummary li::before {
+  content: "- ";
+  color: goldenrod;
+}
+
+.AboutSummary li {
+  padding-bottom: 10px;
 }
 
 .Nav {
@@ -270,6 +328,7 @@ h4 {
 
 .ExperienceSummary ul li::before {
   content: "- ";
+  color: goldenrod;
 }
 
 .Employers {
